--- a/JoF.Rail.Core.Web/bower.json
+++ b/JoF.Rail.Core.Web/bower.json
@@ -6,7 +6,7 @@
     "jquery-validation": "1.17.0",
     "jquery-validation-unobtrusive": "v3.2.10",
     "jquery-ui": "1.12.1",
-    "bootstrap": "v4.1.1",
+    "bootstrap": "4.1.3",
     "Font-Awesome": "5.1.0"
   },
   "ignore": [
