--- a/JoF.Rail.Standard/JoF.Rail.Standard.csproj
+++ b/JoF.Rail.Standard/JoF.Rail.Standard.csproj
@@ -19,10 +19,12 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="FluentValidation" Version="7.6.104" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\JoF.Rail.Standard.Core\JoF.Rail.Standard.Core.csproj" />
     <ProjectReference Include="..\Services\JoF.Rail.Service.LiveDepartureBoards\JoF.Rail.Service.LiveDepartureBoards.csproj" />
   </ItemGroup>
 
