--- a/Tests/JoF.Rail.Tests.xUnit/JoF.Rail.Tests.xUnit.csproj
+++ b/Tests/JoF.Rail.Tests.xUnit/JoF.Rail.Tests.xUnit.csproj
@@ -13,4 +13,8 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\JoF.Rail.Standard\JoF.Rail.Standard.csproj" />
+  </ItemGroup>
+
 </Project>
