--- a/JoF.Rail.Core.Web/Properties/launchSettings.json
+++ b/JoF.Rail.Core.Web/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "",
+      "launchUrl": "Boards/Departures/HHE",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
