--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ bld/
 .vs/
 
 **/wwwroot/lib/
-**/wwwroot/dist/
+# **/wwwroot/dist/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
