--- a/JoF.Rail.Core.Web/JoF.Rail.Core.Web.csproj
+++ b/JoF.Rail.Core.Web/JoF.Rail.Core.Web.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="gulp" />
+    <Exec Command="if $(ConfigurationName)==Debug gulp" />
   </Target>
 
 </Project>
