--- a/JoF.Rail.Core.Web/bower.json
+++ b/JoF.Rail.Core.Web/bower.json
@@ -7,7 +7,8 @@
     "jquery-validation-unobtrusive": "v3.2.10",
     "jquery-ui": "1.12.1",
     "bootstrap": "4.1.3",
-    "Font-Awesome": "5.1.0"
+    "Font-Awesome": "5.1.0",
+    "markerclustererplus": "2.1.4"
   },
   "ignore": [
     "**/.*",
