--- a/JoF.Rail.Core.Web/bower.json
+++ b/JoF.Rail.Core.Web/bower.json
@@ -8,7 +8,8 @@
     "jquery-ui": "1.12.1",
     "bootstrap": "4.1.3",
     "Font-Awesome": "5.1.0",
-    "markerclustererplus": "2.1.4"
+    "markerclustererplus": "2.1.4",
+    "jquery-date-range-picker": "v0.18.0"
   },
   "ignore": [
     "**/.*",
