Fixed stoopid nuget reference to C:  Also fixed exception handling (coz that ref was wrong...)

--- a/Core/JoF.Rail.Core/JoF.Rail.Core.csproj
+++ b/Core/JoF.Rail.Core/JoF.Rail.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -32,12 +32,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Services\JoF.Rail.Service.LiveDepartureBoards\JoF.Rail.Service.LiveDepartureBoards.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http.abstractions\2.1.0\lib\netstandard2.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
