--- a/Hosting/JoF.Rail.Web/Properties/launchSettings.json
+++ b/Hosting/JoF.Rail.Web/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Home",
+      "launchUrl": "Maps/Station",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
