Hand merged from darwin_feed and darwin_feed_2 (created DarwinFeed service; added SignalR).  Moved XSDs (RttiPPT.cs) to v16

--- a/Hosting/JoF.Rail.Web/tsconfig.json
+++ b/Hosting/JoF.Rail.Web/tsconfig.json
@@ -1,7 +1,8 @@
 ﻿{
   "compilerOptions": {
     "allowJs": true,
-    "noEmit": true
+    "noEmit": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "wwwroot/lib" //ignore everything in the lib folder (bootstrap, jquery, etc)
