--- a/Hosting/JoF.Rail.Web/package.json
+++ b/Hosting/JoF.Rail.Web/package.json
@@ -15,5 +15,8 @@
     "gulp-uglify": "3.0.0",
     "gulp-rename": "1.3.0",
     "gulp-clean-css": "3.9.4"
+  },
+  "dependencies": {
+    "@aspnet/signalr": "1.1.0"
   }
 }
